<resources>
    <string name="app_name">Patients Record</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="no_patients_match_your_search">No Patients match your search</string>
    <string name="no_stored_patients_yet">No stored patients yet.  Attempting to download patients you might have previously stored from our servers</string>
    <string name="seems_you_have_never_used_this_app">Seems You have never used this app.   Get started by tapping the button at bottom right to add a new patient.</string>
    <string name="edit_patient">Edit Patient</string>
    <string name="add_new_patient">Add New Patient</string>
    <string name="please_fill_in_all_patients_details">Please fill in all patients details</string>
    <string name="ok">OK</string>
    <string name="select_an_app_to_share_with">Select APP to Share WIth</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_you_want_to_delete_this_patient">Are you sure you want to delete this patient</string>
    <string name="delete">DELETE</string>
    <string name="deatails_of">Details of </string>
    <string name="are"> are </string>
    <string name="nothing_yet">Nothing yet</string>
    <string name="deletes_this_patient_from_your_phone">Deletes this patient from your phone</string>
    <string name="share_this_patient_s_clinical_details">Share this patient\'s clinical details</string>
    <string name="share">SHARE</string>
    <string name="toggles_patients_sort_order">Toggles patients sort order</string>
    <string name="search_for_a_patient_by_name_hospital_number_or_diagnosis">Search for a patient by name, hospital number or diagnosis</string>
    <string name="sort">SORT</string>
    <string name="search">SEARCH</string>
    <string name="search_for_patients">Search for Patients</string>
    <string name="recently_viewed_patient_details_appear_here">Recently viewed patient details appear here</string>
    <string name="name">Name</string>
    <string name="occupation">Occupation</string>
    <string name="marital_status">Marital status</string>
    <string name="address">Address</string>
    <string name="religion">Religion</string>
    <string name="state_of_origin">State of origin</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="save">SAVE</string>
    <string name="age">Age</string>
    <string name="details">Details</string>
    <string name="hospital_number">Hospital number</string>
    <string name="sex">Sex</string>
</resources>
